#201120 - set up dev environment

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="conf-container-wrapper">
 		<div class="conf-equipment-chosen">
-			<h5>This is an accordion with some really long content</h5>
+			<h1 style="margin: 40px 0;">This is an accordion with some really long content</h1>
 			<ul class="trail-accordion">
 				<li>
 					<div class="trail-accordion-header">
